# Stratum

./: .env.example  .gitignore  README.md  conversation.txt  demo.config.json  demo_workflow.py  main.py  pyproject.toml  stratum.config.json  stratum.db-shm  stratum.db-wal
Frontend/files/: README.md
Frontend/stratum/: index.html  package-lock.json
Frontend/stratum/src/: index.css
Frontend/stratum/src/api/: stratum.js
Frontend/stratum/src/components/: ApiSettingsModal.jsx  CenterPane.jsx  DiffView.jsx  ExecutionStepList.jsx  RunSidebar.jsx  StepDetailPanel.jsx  TopNav.jsx
Frontend/stratum/src/data/: mockData.js
Frontend/stratum/src/utils/: statusHelpers.js
frontend/stratum/: package.json
frontend/stratum/src/: Dashboard.jsx
frontend/stratum/src/api/: stratum.js
frontend/stratum/src/components/: AgentsView.jsx  ApiSettingsModal.jsx  CenterPane.jsx  ReplayToast.jsx  RunSidebar.jsx  StatsBar.jsx  StepDetailPanel.jsx  TopNav.jsx  WorkflowGraph.jsx
frontend/stratum/src/data/: adapters.js
frontend/stratum/src/utils/: statusHelpers.js
stratum/api/: auth.py  routes.py  server.py
stratum/core/: agent.py  config_loader.py  crypto.py  error_classifier.py  execution_engine.py  llm_client.py  models.py  rate_limiter.py  replay_engine.py  workflow.py
stratum/storage/: file_run_store.py  run_store.py  sqlite_run_store.py
tests/: test_agent.py  test_api.py  test_config_loader.py  test_execution_engine.py  test_governance.py  test_replay_engine.py  test_sqlite_store.py  test_storage.py  test_workflow.py
